sudo code fix updated

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,11 +6,11 @@ pipeline {
             steps {
                 sh '''
                 # Docker Build
-                docker build -t 642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER .
+                sudo docker build -t 642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER .
                 # ecr Login
-                aws ecr get-login-password --region ap-southeast-1 | sudo docker login --username AWS --password-stdin 642958529262.dkr.ecr.ap-southeast-1.amazonaws.com
+                sudo aws ecr get-login-password --region ap-southeast-1 | sudo docker login --username AWS --password-stdin 642958529262.dkr.ecr.ap-southeast-1.amazonaws.com
                 # push the image to ecr
-                docker push 6642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER '''
+                sudo docker push 6642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER '''
             }
         }
         stage('EKS Deploy') {
