--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,7 +10,8 @@ pipeline {
                 # ecr Login
                 sudo aws ecr get-login-password --region ap-southeast-2 | sudo docker login --username AWS --password-stdin 642958529262.dkr.ecr.ap-southeast-2.amazonaws.com
                 # push the image to ecr
-                sudo docker push 6642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER '''
+                sudo docker push 6642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER
+                '''
             }
         }
         stage('EKS Deploy') {
@@ -18,7 +19,8 @@ pipeline {
                 sh '''
                 # apply kubectl
                 cd k8s/
-                kubectl apply -f namespace.yaml deployment.yaml service.yaml ingress.yaml '''
+                kubectl apply -f .
+                '''
             }
         }
         stage('Validation') {
@@ -26,7 +28,8 @@ pipeline {
                 sh '''
                 cd k8s/
                 # apply kubectl
-                kubectl get po -A '''
+                kubectl get po -A
+                '''
             }
         }
     }
