--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           # - Each init container must complete successfully before the next one starts.
       containers:
       - name:  static-website
-        image:  static-website:latest
+        image:  642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:7
         resources:
           requests:
             cpu: 100m
