added helm charts

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,31 +6,31 @@ pipeline {
             steps {
                 sh '''
                 # Docker Build
-                sudo docker build -t 642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER .
+                sudo docker build -t 642958529262.dkr.ecr.ap-southeast-1.amazonaws.com/static-apache:$BUILD_NUMBER .
                 # ecr Login
-                aws ecr get-login-password --region ap-southeast-2 | sudo docker login --username AWS --password-stdin 642958529262.dkr.ecr.ap-southeast-2.amazonaws.com
+                aws ecr get-login-password --region ap-southeast-1 | sudo docker login --username AWS --password-stdin 642958529262.dkr.ecr.ap-southeast-1.amazonaws.com
                 # push the image to ecr
-                sudo docker push 642958529262.dkr.ecr.ap-southeast-2.amazonaws.com/static-apache:$BUILD_NUMBER
+                sudo docker push 642958529262.dkr.ecr.ap-southeast-1.amazonaws.com/static-apache:$BUILD_NUMBER
                 '''
             }
         }
         stage('EKS Deploy') {
             steps {
                 sh '''
-                # apply kubectl
-                cd k8s/
-                kubectl apply -f .
+                # helm
+                kubectl get nodes
+                helm upgrade -i static-dev static
                 '''
             }
         }
-        stage('Validation') {
-            steps {
-                sh '''
-                cd k8s/
-                # apply kubectl
-                kubectl get po -A
-                '''
-            }
-        }
+        // stage('Validation') {
+        //     steps {
+        //         sh '''
+        //         cd k8s/
+        //         # apply kubectl
+        //         kubectl get po -A
+        //         '''
+        //     }
+        // }
     }
 }
