--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,8 +18,8 @@ pipeline {
             steps {
                 sh '''
                 # helm
-                kubectl get nodes
-                helm upgrade -i static-dev static
+                kubectl create ns
+                helm upgrade -i static-dev static -n dev
                 '''
             }
         }
