--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
                 sh '''
                 # helm
-                kubectl create ns dev
+                # kubectl create ns dev
                 helm upgrade -i static-dev static -n dev
                 '''
             }
